--- a/index.html
+++ b/index.html
@@ -1,29 +1,42 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Image Compressor - Optimize Images for Social Media</title>
-    <meta name="description" content="Compress and resize images for social media, WhatsApp, and web use. Fast, free, and easy to use." />
-    <meta name="author" content="NAUTBOL" />
 
-    <meta property="og:title" content="Image Compressor - Optimize Images for Social Media" />
-    <meta property="og:description" content="Compress and resize images for social media, WhatsApp, and web use. Fast, free, and easy to use." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-FKMY3JZVHK"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@NAUTBOL" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    gtag('config', 'G-FKMY3JZVHK');
+  </script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Image Compressor - Optimize Images for Social Media</title>
+  <meta name="description"
+    content="Compress and resize images for social media, WhatsApp, and web use. Fast, free, and easy to use." />
+  <meta name="author" content="NAUTBOL" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  </head>
+  <meta property="og:title" content="Image Compressor - Optimize Images for Social Media" />
+  <meta property="og:description"
+    content="Compress and resize images for social media, WhatsApp, and web use. Fast, free, and easy to use." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@NAUTBOL" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
