--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+  <script type='text/javascript'
+    src='//pl27193589.profitableratecpm.com/1f/eb/9e/1feb9e9633b6ccde2f9b3f2544e86889.js'></script>
 </body>
 
 </html>
