--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
     rel="stylesheet">
 
   <!-- Adsterra Popunder -->
-  <script>
+  <!-- <script>
     if (location.hostname.includes("kuantyk.com")) {
       const adsterraScript = document.createElement("script");
       adsterraScript.src = "//pl27244080.profitableratecpm.com/e6/b6/2b/e6b62b7aa43347c99276774a20b6e861.js";
       adsterraScript.type = "text/javascript";
       document.head.appendChild(adsterraScript);
     }
-  </script>
+  </script> -->
 </head>
 
 <body>
