--- a/index.html
+++ b/index.html
@@ -32,21 +32,22 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
-
-  <!-- Adsterra Popunder -->
-  <!-- <script>
-    if (location.hostname.includes("kuantyk.com")) {
-      const adsterraScript = document.createElement("script");
-      adsterraScript.src = "//pl27244080.profitableratecpm.com/e6/b6/2b/e6b62b7aa43347c99276774a20b6e861.js";
-      adsterraScript.type = "text/javascript";
-      document.head.appendChild(adsterraScript);
-    }
-  </script> -->
 </head>
 
 <body>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
+
+  <!-- Adsterra -->
+  <script>
+    if (location.hostname.includes("kuantyk.com")) {
+      const adsterraScript = document.createElement("script");
+      adsterraScript.src = "//pl27193589.profitableratecpm.com/1f/eb/9e/1feb9e9633b6ccde2f9b3f2544e86889.js";
+      adsterraScript.type = "text/javascript";
+      document.head.appendChild(adsterraScript);
+    }
+  </script>
+
 </body>
 
 </html>
