--- a/index.html
+++ b/index.html
@@ -11,27 +11,42 @@
 
     gtag('config', 'G-FKMY3JZVHK');
   </script>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Compressor - Optimize Images for Social Media</title>
-  <meta name="description"
-    content="Compress and resize images for social media, WhatsApp, and web use. Fast, free, and easy to use." />
-  <meta name="author" content="NAUTBOL" />
 
-  <meta property="og:title" content="Image Compressor - Optimize Images for Social Media" />
+  <title>Redimensiona y Comprime Imágenes Gratis | KUANTYK Resize</title>
+  <meta name="description"
+    content="Redimensiona y comprime imágenes gratis directamente en tu navegador. Ideal para WhatsApp, redes sociales y sitios web. Sin subir archivos, con máxima privacidad." />
+  <meta name="keywords"
+    content="comprimir imágenes, redimensionar imágenes, optimizar imágenes, reducir peso imágenes, imágenes para WhatsApp, imágenes para redes sociales, herramienta online" />
+  <meta name="author" content="KUANTYK" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="UTF-8" />
+
+  <link rel="canonical" href="https://resize.kuantyk.com/" />
+
+  <meta property="og:title" content="Comprime y Redimensiona Imágenes Gratis | KUANTYK Resize" />
   <meta property="og:description"
-    content="Compress and resize images for social media, WhatsApp, and web use. Fast, free, and easy to use." />
+    content="Optimiza tus imágenes para redes sociales y la web sin perder calidad. Gratis, rápido y seguro: el procesamiento es local, no se sube nada." />
+  <meta property="og:url" content="https://resize.kuantyk.com/" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <meta property="og:site_name" content="KUANTYK Resize" />
+  <meta property="og:image" content="https://resize.kuantyk.com/og-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Comprime y Redimensiona Imágenes Gratis | KUANTYK Resize" />
+  <meta name="twitter:description"
+    content="Reduce el tamaño y dimensiones de tus imágenes directamente en el navegador. Privacidad total y sin límites, ideal para compartir online." />
+  <meta name="twitter:image" content="https://resize.kuantyk.com/og-image.png" />
   <meta name="twitter:site" content="@NAUTBOL" />
-  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap"
     rel="stylesheet">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
 </head>
 
 <body>
