--- a/index.html
+++ b/index.html
@@ -12,29 +12,29 @@
     gtag('config', 'G-FKMY3JZVHK');
   </script>
 
-  <title>Redimensiona y Comprime Imágenes Gratis | KUANTYK Resize</title>
+  <title>Resize & Compress Images for Free | KUANTYK Resize</title>
   <meta name="description"
-    content="Redimensiona y comprime imágenes gratis directamente en tu navegador. Ideal para WhatsApp, redes sociales y sitios web. Sin subir archivos, con máxima privacidad." />
+    content="Resize and compress images for free directly in your browser. Perfect for WhatsApp, social media, and websites. No uploads, maximum privacy." />
   <meta name="keywords"
-    content="comprimir imágenes, redimensionar imágenes, optimizar imágenes, reducir peso imágenes, imágenes para WhatsApp, imágenes para redes sociales, herramienta online" />
+    content="compress images, resize images, image optimization, reduce image size, images for WhatsApp, images for social media, online tool" />
   <meta name="author" content="KUANTYK" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta charset="UTF-8" />
 
   <link rel="canonical" href="https://resize.kuantyk.com/" />
 
-  <meta property="og:title" content="Comprime y Redimensiona Imágenes Gratis | KUANTYK Resize" />
+  <meta property="og:title" content="Compress & Resize Images for Free | KUANTYK Resize" />
   <meta property="og:description"
-    content="Optimiza tus imágenes para redes sociales y la web sin perder calidad. Gratis, rápido y seguro: el procesamiento es local, no se sube nada." />
+    content="Optimize your images for social media and the web without quality loss. Free, fast, and secure—everything is processed locally in your browser." />
   <meta property="og:url" content="https://resize.kuantyk.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="KUANTYK Resize" />
   <meta property="og:image" content="https://resize.kuantyk.com/og-image.png" />
 
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Comprime y Redimensiona Imágenes Gratis | KUANTYK Resize" />
+  <meta name="twitter:title" content="Compress & Resize Images for Free | KUANTYK Resize" />
   <meta name="twitter:description"
-    content="Reduce el tamaño y dimensiones de tus imágenes directamente en el navegador. Privacidad total y sin límites, ideal para compartir online." />
+    content="Easily reduce the size and dimensions of your images directly in your browser. 100% private, no uploads, perfect for online sharing." />
   <meta name="twitter:image" content="https://resize.kuantyk.com/og-image.png" />
   <meta name="twitter:site" content="@NAUTBOL" />
 
