--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
   <script type="module" src="/src/main.tsx"></script>
 
   <!-- Adsterra -->
-  <script>
+  <!-- <script>
     if (location.hostname.includes("kuantyk.com")) {
       const adsterraScript = document.createElement("script");
       adsterraScript.src = "//pl27193589.profitableratecpm.com/1f/eb/9e/1feb9e9633b6ccde2f9b3f2544e86889.js";
       adsterraScript.type = "text/javascript";
       document.head.appendChild(adsterraScript);
     }
-  </script>
+  </script> -->
 
 </body>
 
