--- a/index.html
+++ b/index.html
@@ -53,15 +53,16 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
-  <!-- Adsterra -->
-  <!-- <script>
-    if (location.hostname.includes("kuantyk.com")) {
-      const adsterraScript = document.createElement("script");
-      adsterraScript.src = "//pl27193589.profitableratecpm.com/1f/eb/9e/1feb9e9633b6ccde2f9b3f2544e86889.js";
-      adsterraScript.type = "text/javascript";
-      document.head.appendChild(adsterraScript);
+  <script>
+    if (window.location.hostname.includes("kuantyk.com")) {
+      const script = document.createElement("script");
+      script.src = "https://fpyf8.com/88/tag.min.js";
+      script.async = true;
+      script.setAttribute("data-zone", "160225");
+      script.setAttribute("data-cfasync", "false");
+      document.body.appendChild(script);
     }
-  </script> -->
+  </script>
 
 </body>
 
